tests/checker/fail/codegen_gap_mapped_compound.can
Unit => Program {
    List(1 * 2)
        -> Mapped((Int) => List<Int> { List(Int * Int) })
        -> Length
        -> Print
}
